--- a/src/index.jade
+++ b/src/index.jade
@@ -20,7 +20,7 @@ block content
 									if val.author
 										div.article__author__container.show-for-large
 											if val.author[0].image
-												div.article__author__img(style="background-image:url('#{val.author[0].image}')")
+												div.article__author__img(style="background-image:url('/images/#{val.author[0].image}')")
 												div.article__author__name #{val.author[0].name}
 											else
 												div.article__author__name <small>WITH</small> #{val.author[0].name}
@@ -74,7 +74,7 @@ block content
 										if val.author
 											div.article__author__container
 												if val.author[0].image
-													div.article__author__img(style="background-image:url('#{val.author[0].image}')")
+													div.article__author__img(style="background-image:url('/images/#{val.author[0].image}')")
 													div.article__author__name #{val.author[0].name}
 												else
 													div.article__author__name <small>WITH</small> #{val.author[0].name}
