--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -5,6 +5,7 @@ $colors: (
 	'subscribe': #58A2D1,
 	'subscribe-btn': #808080,
 	'subscribe-placeholder': #094260,
+	'subscribe-grey': #EEF3F6,
 	'footer-light': #E2E2E2,
 	'footer-dark': #333333,
 	'footer-dark--text': #cccccc,
