--- a/src/_styles/06_components/_components.container.scss
+++ b/src/_styles/06_components/_components.container.scss
@@ -1,6 +1,10 @@
 .container{
 
 	&--standard{
-		margin-top: 200px;
+		margin-top: 101px;
+
+		@include mq(large){
+			margin-top: 200px;
+		}
 	}
 }
