--- a/src/_styles/04_base/_base.scss
+++ b/src/_styles/04_base/_base.scss
@@ -17,7 +17,11 @@
  p{
  	@include font('Breakers-Light');
  	@include m-color('paragraph');
- 	font-size: 21px;
+ 	font-size: 16px;
+
+ 	@include mq(large){
+ 		font-size: 21px;
+ 	}
 
  	&:last-child{
  		margin-bottom: 0;
