--- a/src/standard.jade
+++ b/src/standard.jade
@@ -2,7 +2,7 @@ extends _layouts/base
 
 block content
 	div.container.container--standard.page--fitness
-		div.row
+		div.row.show-for-large
 			div.columns.large-12
 				div.breadcrumb__container
 					ul.breadcrumb__list
@@ -14,7 +14,7 @@ block content
 					li.breadcrumb__list__enclosure.breadcrumb__list__enclosure--divider -
 					li.breadcrumb__list__enclosure 
 						a.breadcrumb__list__enclosure__link(href="#") TRAINING
-		div.row
+		div.row.small-collapse.large-uncollapse
 			div.columns.large-12
 				div.standard__img__container
 					img.standard__img(src="/images/unnamed-1-1.jpg", alt="Article image")
@@ -22,12 +22,12 @@ block content
 		div.row
 			div.columns.large-8.large-centered
 				div.standard__title__container
-					div.standard__title WHY GROUP TRAINING PAYS OFF BETTER IN THE LONG RUN
+					div.standard__title Why group training pays off better in the long run
 				div.standard__stats
 					div.standard__read__container
 						img.standard__read__icon(src="/images/fitness-read.png", alt="icon")
 						small.standard__read__text 4 MINS READ
-					div.standard__comments 3 <small>COMMENTS</small>
+					div.standard__comments.show-for-large 3 <small>COMMENTS</small>
 				div.standard__content
 					p Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione <a href="#">voluptatem sequi</a> nesciunt.
 
@@ -59,14 +59,18 @@ block content
 						li.tag__list__enclosure 
 							a(href="#") #gettingfit
 				div.author__container
-					div.author__img__container(style="background-image:url('/images/placeholder3.jpg');")
+					div.author__img__container(style="background-image:url('/images/103143490_8.jpg');")
 					div.author__info
-						div.author__name OASHEEY KEY
+						div.author__name OSHAY KEY
 						div.author__text Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. <a href="#">Nulla consequat massa quis enim</a>.
-						a.author__social__link(href="#")
+						a.author__social__link(href="#").show-for-large
 							img(src="/images/facebook-author.png")
-						a.author__social__link(href="#")
+						a.author__social__link(href="#").show-for-large
 							img(src="/images/twitter-author.png")
+						a.author__social__link(href="#").hide-for-large
+							img(src="/images/facebook-author-m.png")
+						a.author__social__link(href="#").hide-for-large
+							img(src="/images/twitter-author-m.png")
 					div.author__join__container--outer
 						div.author__join__container--center
 							a.author__join__container--inner(href="#")
