--- a/src/standard.jade
+++ b/src/standard.jade
@@ -74,7 +74,7 @@ block content
 					div.author__join__container--outer
 						div.author__join__container--center
 							a.author__join__container--inner(href="#")
-								img(src="favicon.ico")
+								img(src="/images/comment.png")
 								div.author__join__text Join in the discussion
 				a.standard__comments--view(href="#") VIEW COMMENTS <small>(</small>3<small>)</small>
 		div.standard__pattern__container(style="background-image: url('/images/pattern.png');")
