--- a/src/_styles/06_components/_components.author.scss
+++ b/src/_styles/06_components/_components.author.scss
@@ -87,6 +87,7 @@ $jointhediscussionheight: 40px;
 			@include font('Breakers-Regular');
 			@include m-color('white');
 			font-size: 21px;
+			margin-left: 10px;
 		}
 	}
 
@@ -105,7 +106,11 @@ $jointhediscussionheight: 40px;
 
 		// {{author__social__link}}
 		&__link{
-			margin-right: 10px;
+			margin-right: 40px;
+
+			@include mq(large){
+				margin-right: 10px;
+			}
 		}
 	}
 
