--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -4,6 +4,7 @@ $colors: (
 	'header': #58a2d2,
 	'subscribe': #58A2D1,
 	'subscribe-btn': #808080,
+	'subscribe-btn-hover': #5d5d5d,
 	'subscribe-placeholder': #094260,
 	'subscribe-grey': #EEF3F6,
 	'footer-light': #E2E2E2,
