--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -2,7 +2,7 @@ mixin header(spec)
 	- spec = spec || {}
 	- spec.__class = spec.__class || ''
 
-	
+	div.overlay
 	header.headroom
 		div.row.fullheight
 			div.columns.large-12.fullheight
