mobile menu progress

--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -23,3 +23,11 @@ mixin header(spec)
 							img.header__subscribe(src="/images/subscribe.png", alt="subscribe")
 							img.header__subscribe-white(src="/images/subscribe-white.png", alt="subscribe")
 						img.header__search(src="/images/search.png", alt="search")
+	div.mobile__menu
+		div.mobile__menu__close__container
+			img.mobile__menu__close__icon(src='/images/menu-close.png')
+			div.mobile__menu__close__text Menu
+		div.mobile__menu__button__container
+			div.mobile__menu__button__icon__container
+				img(src='/images/fitness-nav.png')
+			div.mobile__menu__button__text Fitness
