--- a/src/_styles/main.scss
+++ b/src/_styles/main.scss
@@ -24,6 +24,7 @@
 @import "06_components/_components.footer.scss";
 @import "06_components/_components.grid.scss";
 @import "06_components/_components.header.scss";
+@import "06_components/_components.mobile.scss";
 @import "06_components/_components.overlay.scss";
 @import "06_components/_components.slick.scss";
 @import "06_components/_components.standard.scss";
