Remove temp fonts Add search menu

--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -50,3 +50,9 @@ mixin header(spec)
 			div.mobile__menu__button__icon__container
 			div.mobile__menu__button__text Contact
 		div.mobile__line
+	div.mobile__search__container--outer
+		div.mobile__search__container--center
+			div.mobile__search__container--inner
+				form.mobile__search__form
+					input.mobile__search__input(placeholder="I'm looking for...")
+					input.mobile__search__submit(type="submit" value='.')
