--- a/src/_styles/01_settings/_settings.colors.scss
+++ b/src/_styles/01_settings/_settings.colors.scss
@@ -22,5 +22,6 @@ $colors: (
 	'article-author': #666666,
 	'slick-dot-inactive': #818181,
 	'slick-dot-active': #2C6582,
-	'jointhediscussion': #58A2D1
+	'jointhediscussion': #58A2D1,
+	'mobile-menu': #58A2D1
 );
