--- a/src/_styles/06_components/_components.mobile.scss
+++ b/src/_styles/06_components/_components.mobile.scss
@@ -85,9 +85,83 @@
 	    }
 	}
 
+	// {{mobile__line}}
 	&__line{
 		border-bottom: 1px solid f-color('white');
 		padding-bottom: 35px;
 		height: 1px;
+	}
+
+	// {{mobile__search}}
+	&__search{
+
+		// {{mobile__search__container}}
+		&__container{
+			
+			// {{mobile__search__container--outer}}
+			&--outer{
+				@include m-bgcolor('mobile-menu');
+				@include m-zindex('mobile-search');
+				height: 200px;
+				@include m-zindex('mobile-menu');
+			    background-color: rgba(82, 154, 204, 1);
+			    display: none;
+			    position: absolute;
+			    left: 0;
+			    right: 0;
+			    top: 0;
+			    transition: all 0.3s;
+			    -webkit-transition: all 0.3s;
+			}
+
+			// {{mobile__search__container--center}}
+			&--center{
+				height: 100%;
+				max-width: 1160px;
+				margin: 0 auto;
+			}
+
+			// {{mobile__search__container--inner}}
+			&--inner{
+				height: 100%;
+				display: flex;
+				align-items: center;
+			}
+		}
+
+		// {{mobile__search__form}}
+		&__form{
+			width:100%;border-bottom:1px solid white;padding-bottom: 20px;
+			margin: 0 50px;
+			display: flex;
+		}
+
+		// {{mobile__search__input}}
+		&__input{
+			@include font('Breakers-Light');
+			background-color: transparent;
+			border: none;
+			outline: none;
+			color: white;
+			padding: 0;
+			font-size: 42px;
+			width: 90%;
+
+			&::-webkit-input-placeholder{
+	 			@include m-color('white');
+ 			}
+		}
+
+		// {{mobile__search__submit}}
+		&__submit{
+			@include m-color('mobile-menu');
+			background-color: transparent;
+			background-image: url('/images/search.png');
+			background-repeat: no-repeat;
+			background-position: center;
+			outline: none;
+			border: 0;
+			width: 10%;
+		}
 	}
 }
