--- a/src/_styles/06_components/_components.mobile.scss
+++ b/src/_styles/06_components/_components.mobile.scss
@@ -131,9 +131,11 @@
 
 		// {{mobile__search__form}}
 		&__form{
-			width:100%;border-bottom:1px solid white;padding-bottom: 20px;
-			margin: 0 50px;
 			display: flex;
+			width: 100%;
+			border-bottom: 1px solid white;
+			padding-bottom: 20px;
+			margin: 0 50px;
 		}
 
 		// {{mobile__search__input}}
