--- a/src/_styles/06_components/_components.mobile.scss
+++ b/src/_styles/06_components/_components.mobile.scss
@@ -7,7 +7,7 @@
 	    background-size: 75%;
 	    background-color: rgba(82, 154, 204, 1);
 	    display: none;
-	    position: absolute;
+	    position: fixed;
 	    top: 0;
 	    bottom: 0;
 	    left: 0;
@@ -106,7 +106,7 @@
 				@include m-zindex('mobile-menu');
 			    background-color: rgba(82, 154, 204, 1);
 			    display: none;
-			    position: absolute;
+			    position: fixed;
 			    left: 0;
 			    right: 0;
 			    top: 0;
@@ -135,7 +135,6 @@
 			width: 100%;
 			border-bottom: 1px solid white;
 			padding-bottom: 20px;
-			margin: 0 50px;
 		}
 
 		// {{mobile__search__input}}
