--- a/src/_styles/06_components/_components.mobile.scss
+++ b/src/_styles/06_components/_components.mobile.scss
@@ -13,8 +13,6 @@
 	    left: 0;
 	    width: 400px;
 	    padding: 10px;
-	    transition: all 0.3s;
-	    -webkit-transition: all 0.3s;
 
 	    // {{mobile__menu__close}}
 	    &__close{
@@ -110,8 +108,6 @@
 			    left: 0;
 			    right: 0;
 			    top: 0;
-			    transition: all 0.3s;
-			    -webkit-transition: all 0.3s;
 			}
 
 			// {{mobile__search__container--center}}
@@ -134,7 +130,7 @@
 			display: flex;
 			width: 100%;
 			border-bottom: 1px solid white;
-			padding-bottom: 20px;
+			padding: 20px 0;
 		}
 
 		// {{mobile__search__input}}
@@ -146,7 +142,7 @@
 			color: white;
 			padding: 0;
 			font-size: 42px;
-			width: 90%;
+			flex-grow: 1;
 
 			&::-webkit-input-placeholder{
 	 			@include m-color('white');
@@ -162,7 +158,8 @@
 			background-position: center;
 			outline: none;
 			border: 0;
-			width: 10%;
+			width: 61px;
+			flex-shrink: 0;
 		}
 	}
 }
