--- a/src/_modules/header/header.jade
+++ b/src/_modules/header/header.jade
@@ -68,16 +68,16 @@ mixin header(spec)
 				div.subscribe__mobile__btn.hide-for-large Subscribe here
 				form.subscribe__form.show-for-large(action="/", method="post")
 					div.subscribe__checkbox__container
-						input.subscribe__checkbox#subscribe-fitness(type='checkbox', name='subscribe-checkbox')
-						label.subscribe__checkbox__label(for='subscribe-fitness')
+						input.subscribe__checkbox#subscribe-mobile-fitness(type='checkbox', name='subscribe-mobile-checkbox')
+						label.subscribe__checkbox__label(for='subscribe-mobile-fitness')
 							span.subscribe__checkbox__span
 							| Fitness
-						input.subscribe__checkbox#subscribe-lifestyle(type='checkbox', name='subscribe-checkbox')
-						label.subscribe__checkbox__label(for='subscribe-lifestyle')
+						input.subscribe__checkbox#subscribe-mobile-lifestyle(type='checkbox', name='subscribe-mobile-checkbox')
+						label.subscribe__checkbox__label(for='subscribe-mobile-lifestyle')
 							span.subscribe__checkbox__span
 							| Lifestyle
-						input.subscribe__checkbox#subscribe-food(type='checkbox', name='subscribe-checkbox')
-						label.subscribe__checkbox__label(for='subscribe-food')
+						input.subscribe__checkbox#subscribe-mobile-food(type='checkbox', name='subscribe-mobile-checkbox')
+						label.subscribe__checkbox__label(for='subscribe-mobile-food')
 							span.subscribe__checkbox__span
 							| Food
 					div.subscribe__input__container
