search icon midway

--- a/src/_styles/06_components/_components.header.scss
+++ b/src/_styles/06_components/_components.header.scss
@@ -71,6 +71,12 @@
 	&__search{
 		cursor: pointer;
 		width: 45px;
+		margin-top: 0;
+		transition: all 0.3s;
+
+		.headroom--pinned.headroom--not-top &{
+			margin-top: 65px;
+		}
 
 		@include mq(large){
 			width: auto;
